--- a/chromedriver-scope-issue/Gemfile
+++ b/chromedriver-scope-issue/Gemfile
@@ -5,6 +5,7 @@ source 'https://rubygems.org'
 gem 'automation_helpers'
 gem 'capybara'
 gem 'cucumber'
+gem 'faraday'
 gem 'rspec'
 gem 'selenium-webdriver'
 gem 'site_prism'
